--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.7",
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "p-limit": "^6.1.0"
   }
 }
